# autotabloide_ai

./: .gitattributes  .gitignore  AUTOTABLOIDE AI_ CODEX INDUSTRIALIS.txt  Autotabloide AI_ Documentação Técnica Detalhada.txt  Autotabloide AI_ Fundação e Infraestrutura.txt  CLAUDE.md  PROXIMOS_PASSOS.md  README.md  _marco_f12.txt  _perf.txt  _suite_f12_a.xml  _suite_f12_b.txt  _suite_f12_b.xml  alembic.ini  autotabloide.spec  bootstrap.ps1  check_env.py  init_db.py  lancar_autotabloide.py  main.py  main_qt.py  pyproject.toml  pyproject_lint.toml  setup.py  test_judge.py  test_nav_minimal.py  test_output.py  test_sentinel.py  test_vector.py  test_vector_v2.py  verify_system.py
AutoTabloide_System_Root/config/: product_schema.gbnf  settings.json
alembic/: env.py
app/: __init__.py  editor_app.py  main.py
app/ai/: __init__.py  client.py  conciliacao.py  enriquecimento.py  fake.py  ocr.py  pipeline.py  revisora.py
app/core/: __init__.py  aprendizado.py  atproj.py  atualizacao.py  calendario.py  cofre.py  configuracao.py  database.py  deduplicacao.py  diagnostico.py  excel_acervo.py  genericas.py  lixeira.py  manutencao.py  marco.py  migracao_antiga.py  models.py  modo.py  paths.py  portabilidade.py  projetos.py  rascunho.py  recuperacao.py  repositories.py  sanitize.py  selos.py  sentinela.py  template_compartilhavel.py  vigia.py
app/images/: __init__.py  avaliador.py  biblioteca.py  busca.py  curadoria.py  estudio.py  fundo.py  fundo_ia.py  off.py  upscale.py
app/qt/: __init__.py  alinhamento.py  barra.py  canvas.py  editor.py  fontes.py  historico.py  instancia_unica.py  itens.py  painel_camadas.py  painel_propriedades.py  workers.py
app/rendering/: __init__.py  arranjo.py  cartaz.py  cmyk.py  compositor.py  contraste.py  estilos.py  export.py  grade.py  imposicao.py  impressao.py  marca_dagua.py  migracao.py  model.py  modelos.py  perfis.py  persistencia.py  previa_impressao.py  qr.py  secoes.py  selos.py  social.py  text_fit.py  units.py  video.py
app/scripts/: __init__.py  cartaz_exemplo.py  demo_biblioteca.py  demo_busca_imagem.py  demo_canvas.py  demo_celula_mestre.py  demo_conciliacao.py  demo_editor.py  demo_enriquecimento.py  demo_multi_imagem.py  demo_pipeline.py  demo_remover_fundo.py  demo_selos.py  demo_tabloide.py  demo_upscale.py  empacotar.py  enriquecer_banco.py  fotografar_estados.py  fotografar_fase10.py  fotografar_fase11.py  fotografar_fase12.py  fotografar_fase4.py  fotografar_fase7.py  fotografar_fase8.py  fotografar_fase9.py  fotografar_inicio_f2.py  fotografar_os_f115.py  fotografar_polimento.py  fotografar_telas.py  fumaca_instalador.py  gate_fidelidade.py  gerar_logo.py  gif_fase1.py  gif_fase12.py  importar_tabela.py  perfil_cpu_fase1.py  preview_design.py  screenshots_design.py  selfcheck_bloco_d.py  selfcheck_bloco_e.py  (+8 more)
app/tests/: conftest.py  seeds_portabilidade.py  test_adversarial_portabilidade.py  test_adversarial_vinculo.py  test_ai_enriquecimento.py  test_alinhamento.py  test_almoxarifado.py  test_arranjo.py  test_arte_relativa.py  test_atelie.py  test_biblioteca.py  test_bloco_d_etapa_a.py  test_busca_imagem.py  test_camadas.py  test_canvas.py  test_categorizacao.py  test_celula_mestre.py  test_cmyk.py  test_cofre.py  test_cofre_tela.py  test_conciliacao.py  test_configuracoes.py  test_consolidacao.py  test_dashboard.py  test_deteccao_quintou.py  test_estilos.py  test_etapa_a.py  test_f54.py  test_fabrica.py  test_fase10_imagens.py  test_fase11_cartaz.py  test_fase12_marco.py  test_fase1_tema.py  test_fase1_ui.py  test_fase2_afeto.py  test_fase2_busca.py  test_fase2_eventos.py  test_fase2_inicio.py  test_fase2_lixeira.py  test_fase2_status.py  (+40 more)
docs/: AUDITORIA_COBERTURA.md  AUDITORIA_INTEGRIDADE_VINCULO.md  AUDITORIA_PESSIMISTA.md  AutoTabloide_Adendo2_Editor.docx  AutoTabloide_Adendo_Tecnico.docx  AutoTabloide_Documentacao_Mestre.docx  AutoTabloide_Pacote_de_Decisao.docx  FASES_4_A_12.md  FASE_1.md  FASE_10.md  FASE_11.md  FASE_12.md  FASE_2.md  FASE_3.md  FASE_4.md  FASE_5.md  FASE_6.md  FASE_7.md  FASE_8.md  FASE_9.md  GUIA_RAPIDO.md  INSTALAR_LM_STUDIO.md  ORDEM_BLOCO_D.md  ORDEM_BLOCO_E.md  ORDEM_F5_6.md  ORDEM_F5_8.md  ORDEM_F8.md  ORDEM_SERVICO_F11_5.md  PESQUISA_TABLOIDE.md  PLANO_DE_CONSTRUCAO.md  PLANO_PERFEITO.md  POLIMENTO_F4_F11.md  RECOMENDACOES_150.md  REVISAO_GERAL.md  VISAO_COMPLETA.md
src/ai/: ai_safety.py  download_queue.py  image_validation.py  model_manager.py  neural_engine.py  prompt_templates.py  rag_engine.py  rembg_service.py  request_queue.py  scraper_fallback.py  sentinel.py  sentinel_watchdog.py  sentinel_worker.py  user_agent.py  vision.py
src/core/: __init__.py  advanced_features.py  app_safety.py  app_settings.py  asset_manifest.py  async_io.py  autosave.py  boot_safety.py  century_industrial.py  code_fixes.py  code_quality.py  compliance.py  constants.py  container.py  csv_export.py  data_security.py  database.py  database_safety.py  db_concurrency.py  db_utils.py  event_bus.py  excel_parser.py  exceptions.py  image_processor.py  image_validation.py  import_robust.py  industrial_robustness.py  infrastructure.py  instance_lock.py  integrity.py  json_compression.py  lazy_imports.py  lifecycle.py  logging_config.py  memory.py  migrations.py  models.py  project_manager.py  repositories.py  resilience.py  (+11 more)
src/engine/: judge.py
src/image/: quality.py  upscaler.py
src/infrastructure/: integrity.py
src/qt/: __init__.py  bridge.py  main_window.py  sentinel_bridge.py  services.py  state.py  theme.py  theme.qss
src/rendering/: barcode_utils.py  bleed_system.py  clippath_handler.py  cmyk_converter.py  dpi_validator.py  ghostscript_renderer.py  image_pipeline.py  output.py  output_events.py  page_pagination.py  pdf_export.py  pdf_utils.py  preflight.py  preview_generator.py  rendering_pro.py  rendering_safety.py  svg_cache.py  svg_generator.py  svg_transforms.py  text_fitting.py  thumbnail_cache.py  traceability.py  (+5 more)
tests/: __init__.py  stress_tests.py  test_core.py  test_industrial.py  test_integration.py  test_models.py  test_offline.py  test_ui.py  test_validation.py  test_vector_engine.py
(+174 files in other folders)
