[tool.poetry]
name = "autotabloide-ai"
version = "0.1.0"
description = "Offline-first AI-powered tabloid generation system."
authors = ["Antigravity <antigravity@deepmind.google>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
flet = "0.21.2"
sqlalchemy = "2.0.25"
aiosqlite = "0.19.0"
lxml = "5.1.0"
cairosvg = "2.7.1"
llama-cpp-python = "0.2.23"
pillow = "10.2.0"
pypdf = "4.0.1"
loguru = "0.7.2"
pydantic = "2.6.0"
rapidfuzz = "3.6.0"  # Versão fixa (Passo do Checklist)
playwright = "1.41.0"
psutil = "7.1.3"  # Versão fixa (Passo do Checklist)
# === Visão Computacional (Passos 16-17) ===
rembg = "2.0.50"  # Remoção de fundo com U2-Net
opencv-python-headless = "4.9.0.80"  # Processamento sem GUI
onnxruntime = "1.17.0"  # Backend para rembg
# === Alembic para Migrations (Passos 7-9) ===
alembic = "1.13.1"
# === Industrial Robustness Dependencies (#3-8) ===
httpx = "0.26.0"           # Async HTTP client (Vol. III)
aiofiles = "23.2.1"        # Async file I/O (Vol. III, Tab. 1.1)
fonttools = "4.47.0"       # Font metrics e kerning (Vol. II, Cap. 3.3)
pyphen = "0.15.0"          # Hyphenation PT-BR (Vol. II, Cap. 3.4)
# sentence-transformers = "2.2.2"  # RAG embeddings (Vol. IV, Cap. 2.1) - Optional
# sqlite-vec = "0.1.0"      # Vector store SQLite (Vol. IV, Cap. 2.2) - Optional


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
# === Optional AI/ML Dependencies ===
# Install with: poetry install -E ai
ai = ["sentence-transformers", "sqlite-vec"]

[tool.poetry.group.ai]
optional = true

[tool.poetry.group.ai.dependencies]
sentence-transformers = "2.2.2"  # RAG embeddings (Vol. IV, Cap. 2.1)
# sqlite-vec = "0.1.0"           # Vector store - install manually

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "black (>=24.0.0)",
    "ruff (>=0.1.0)",
    "mypy (>=1.8.0)"
]

# ==============================================================================
# LINTING (Passo 100 do Checklist)
# ==============================================================================

[tool.black]
line-length = 100
target-version = ['py312']
exclude = '''/(\.eggs|\.git|\.venv|build|dist|alembic|__pycache__)/'''

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "C901"]
exclude = [".eggs", ".git", ".venv", "build", "dist", "alembic"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
