[tool.poetry]
name = "autotabloide-ai"
version = "0.1.0"
description = "Offline-first AI-powered tabloid generation system."
authors = ["Antigravity <antigravity@deepmind.google>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
# === Qt Framework (interface) ===
pyside6 = "6.6.1"
# === Banco (SQLAlchemy síncrono — sem async) ===
sqlalchemy = "2.0.25"
# === Leitura de SVG do Illustrator (coordenadas de slots) ===
lxml = "5.1.0"
# === Processamento de imagem (Fase 4) ===
pillow = "10.2.0"
rembg = "^2.0.50"
opencv-python-headless = "4.9.0.80"
# RG-02 (achado da Onda 1): 1.17.0 é incompatível com numpy 2.x (o import do
# rembg morria no ambiente poetry). >=1.19.2 tem wheels compatíveis; o
# ambiente vivo da máquina roda 1.23.x + numpy 2.4 sem problema.
onnxruntime = ">=1.19.2,<2"
spandrel = ">=0.3"       # Real-ESRGAN (upscale F4.3) — traz torch
# === Exportação PDF ===
pypdf = "4.0.1"
# === Utilidades ===
loguru = "0.7.2"
pydantic = "2.6.0"
rapidfuzz = "3.6.0"       # fuzzy da conciliação (Fase 3)
psutil = "7.1.3"
chardet = "5.2.0"         # detecção de encoding de planilhas
openpyxl = "3.1.2"        # leitura de Excel
# === Rede: IA local via API compatível-OpenAI + busca de imagens (Fases 3/4) ===
httpx = "0.26.0"
ddgs = "^9.0"            # busca de imagens (DuckDuckGo; o icrawler quebrou e trazia lixo)
# === Tipografia (ajuste de fonte e hifenização) ===
fonttools = "4.47.0"
pyphen = "0.15.0"

# Removidos na reconstrução (arquitetura antiga):
#   cairosvg, llama-cpp-python, playwright, qasync, aiosqlite, aiofiles, alembic
# A IA passa a ser acessada pela API padrão (httpx); embeddings via sqlite-vec (Fase 3);
# busca de imagens via ddgs/DuckDuckGo (Fase 4). Entram quando a fase chegar.



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
# === Optional AI/ML Dependencies ===
# Install with: poetry install -E ai
ai = ["sentence-transformers", "sqlite-vec"]

[tool.poetry.group.ai]
optional = true

[tool.poetry.group.ai.dependencies]
sentence-transformers = "2.2.2"  # RAG embeddings (Vol. IV, Cap. 2.1)
# sqlite-vec = "0.1.0"           # Vector store - install manually

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "black (>=24.0.0)",
    "ruff (>=0.1.0)",
    "mypy (>=1.8.0)"
]

# ==============================================================================
# LINTING (Passo 100 do Checklist)
# ==============================================================================

[tool.black]
line-length = 100
target-version = ['py312']
exclude = '''/(\.eggs|\.git|\.venv|build|dist|alembic|__pycache__)/'''

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "C901"]
exclude = [".eggs", ".git", ".venv", "build", "dist", "alembic"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
# Testes da reconstrução limpa. O "tests/" antigo (do protótipo) fica de fora.
testpaths = ["app/tests"]
